<?xml version="1.0" encoding="utf-8"?>
<!--     Strings -->
<resources>

    <string name="app_name">NotesX</string>
    <string name="app_description">Penerapan Algoritma Kriptografi RC6, Vigenere dan Caesar Pada Aplikasi Notes Berbasis Android</string>
    <string name="app_credits"><b>Septiyono Adi Putro:</b>\nContact : 08989031096\n"\n</string>
    <string name="app_bottom"><b>Teknik Informatika\nUniversitas BSI Bandung</b></string>

    <!-- Activities -->
    <string name="title_activity_note">" "</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_tags">Edit tags</string>
    <string name="drawer_open">Buka</string>
    <string name="drawer_close">Tutup</string>

    <!-- Actions -->
    <string name="action_settings">Pengaturan</string>
    <string name="action_about">Tentang</string>
    <string name="action_search">Cari</string>
    <string name="action_new_note">Buat Note</string>
    <string name="action_save_note">Simpan</string>
    <string name="action_archive">Archived</string>
    <string name="action_unarchive">Unarchived</string>
    <string name="action_restore">Restore</string>
    <string name="action_empty_trash">Empty Trash</string>
    <string name="action_color">Color</string>
    <string name="action_logout">Logout</string>
    <string name="action_delete">Hapus</string>
    <string name="action_share">Share</string>
    <string name="action_edit_tags">Edit tags</string>
    <string name="action_yes">Ya</string>
    <string name="action_no">Tidak</string>

    <string name="action_new_generic_note">Text biasa</string>
    <string name="action_new_login_note">Form Login</string>
    <string name="action_new_card_note">Form Kartu</string>

    <string name="rename">Rename</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="delete_tag">Hapus tag \"%s\"</string>
    <string name="are_you_sure_delete_tag">Apakah anda ingin menghapus tag ini?</string>

    <string name="whitespace_not_allowed">Error. spasi tidak bisa pada tag!</string>

    <!-- Note Activity -->
    <string name="note_title">Judul</string>
    <string name="note_note">Isi Note</string>
    <string name="empty_note">Note tidak ada!</string>
    <string name="note_saved">Note tersimpan.</string>
    <string name="note_deleted">Note terhapus.</string>
    <string name="note_restored">Note restored.</string>
    <string name="note_archived">Note archived.</string>
    <string name="note_unarchived">Note unarchived.</string>
    <string name="create_a_new_note">Buat Note</string>

    <!-- Bank Card editor -->
    <string name="note_card_name">Nama Kartu</string>
    <string name="note_card_number">Nomor Kartu</string>
    <string name="note_card_valid_from">Valid dari</string>
    <string name="note_card_valid_upto">Valid sampai</string>
    <string name="note_card_cvv">&#160;&#160;&#160;&#160;&#160;&#160;&#160;CVV</string>
    <string name="note_additional_notes">Catatan</string>

    <!-- login editor -->
    <string name="note_login_url">Url</string>
    <string name="note_login_name">&#160;&#160;&#160;Login</string>
    <string name="note_login_password">Password</string>

    <!-- color dialog -->
    <string name="msg_pick_color">Pilih Warna</string>

    <!-- password dialog -->
    <string name="welcome_submessage">Semua file notes anda akan dienkripsi dengan aman</string>
    <string name="password">Password</string>
    <string name="create_password">Masukkan Password</string>
    <string name="show_notes">Buka Notes</string>
    <string name="get_started">Mulai</string>
    <string name="invalid_password">Password Salah!</string>
    <string name="go">Go</string>
    <string name="cancel">Batal</string>

    <!-- Preferences -->
    <string name="pref_catGeneral">General</string>
    <string name="pref_catAppearance">Appearance</string>
    <string name="pref_passwordTimeout">Password timeout</string>
    <string name="pref_passwordTimeoutSummary">Batas waktu ketidakaktifan untuk melakukan login ulang</string>
    <string name="pref_secureWindowTitle">Keamanan tampilan layar</string>
    <string name="pref_secureWindowSummary">Mencegah pengambilan layar konten dari screenshots.</string>
    <string name="pref_dynamicFontSize">Dynamic font size in cards</string>
    <string name="pref_dynamicFontSizeSummary">Card font size is calculated dynamically as per note content. Requires re-login.</string>
    <string name="pref_autoSave">Otomatis menyimpan notes</string>
    <string name="pref_autoSaveSummary">Notes akan otomatis tersimpan dan tidak harus menekan tombol simpan dahulu</string>
    <string name="pref_changePassword">Ganti Password</string>
    <string name="pref_noteListViewType">Tampilan Notes</string>
    <string name="pref_noteListViewTypeSummary">Pilih tampilan yang digunakan untuk menampilkan semua notes di menu utama</string>

        <string name="pref_catStorage">Storage</string>
        <string name="pref_backup">Backup</string>
        <string name="pref_restore">Restore</string>

        <!-- change password -->
    <string name="incorrect_old_password">Password Lama "SALAH"!</string>
    <string name="password_dont_match">Password tidak sama!</string>
    <string name="password_changed_success">Ganti Password telah berhasil!</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_new_password">Konfirmasi</string>
    <string name="button_change">Ganti Password</string>
    <string name="please_wait">Tunggu sebentar&#8230;</string>

    <string name="add_tags">Tambah tag&#8230;</string>
    <string name="no_tags_found">Tag tidak ditemukan!</string>
    <string name="folder_is_empty">%s Tidak ada file!</string>

    <string name="backup">Backup</string>

    <!-- backup and restore -->
    <string name="info_backup_message">
        <![CDATA[
        Sebuah <font color="#cc0000">encrypted backup</font> file akan menyesuaikan dengan
        <font color="#259b24"> password yang telah dibuat.</font>
        Anda akan diminta password yang sama setelah <font color="#2a36b1">proses restore</font>.
        ]]>
    </string>

    <string name="info_restore_message">
        <![CDATA[
        Harap buka <font color="#cc0000">encrypted backup</font> file yang telah dibuat
        dengan nama <font color="#259b24">NotesX backup</font>.
        ]]>
    </string>

    <string name="info_restore_message_2">
       <![CDATA[
        Harap <font color="#cc00000">masukkan password</font> yang telah digunakan sebelumnya.
        Jika password yang dimasukkan benar, <font color="#259b24">tombol akan muncul </font>
        untuk melanjutkan ke langkah berikutnya.
        ]]>
    </string>

    <string name="restoring"><![CDATA[ <font color="#269b24">Restoring&#8230;</font> ]]></string>
    <string name="restore_complete_info"><![CDATA[
    Restore telah <font color="#269b24">berhasil.</font> Restart app atau kembali
    ke <font color="#cc0000">halaman login</font>.
    ]]></string>

    <string name="send_to">Kirim ke</string>
    <string name="backup_complete">Backup Berhasil!</string>
    <string name="backup_error">Backup Gagal!</string>
    <string name="restore_complete">Restore Berhasil!</string>
    <string name="restore_error">Restore Gagal!</string>
    <string name="restore">Restore</string>
    <string name="pick_backup_file">Pick Backup File</string>
    <string name="start_restore">Start Restore</string>
    <string name="backup_permission_error">Backup Gagal! Harap beri hak akses di storage.</string>
    <string name="archive_save_alert">Ada perubahan yang belum disimpan? Apakah anda ingin menyimpan notes ke archive?</string>

</resources>
