<?xml version="1.0" encoding="utf-8"?>

<!--
    Preferences for NotesX
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_catGeneral">
        <CheckBoxPreference
                android:key="AutoSave"
                android:title="@string/pref_autoSave"
                android:defaultValue="false"
                android:summary="@string/pref_autoSaveSummary"
                />

        <CheckBoxPreference
                android:key="SecureWindow"
                android:title="@string/pref_secureWindowTitle"
                android:defaultValue="false"
                android:summary="@string/pref_secureWindowSummary"
                />

        <ListPreference
                android:key="PasswordTimeout"
                android:title="@string/pref_passwordTimeout"
                android:dialogTitle="@string/pref_passwordTimeout"
                android:entries="@array/pref_passwordTimeoutValueNames"
                android:entryValues="@array/pref_passwordTimeoutValues"
                android:defaultValue="10000"
                android:summary="@string/pref_passwordTimeoutSummary"
                />

        <ListPreference
            android:key="NoteListViewType"
            android:title="@string/pref_noteListViewType"
            android:dialogTitle="@string/pref_noteListViewType"
            android:entries="@array/pref_noteListViewTypeNames"
            android:entryValues="@array/pref_noteListViewTypeValues"
            android:defaultValue="tiles"
            android:summary="@string/pref_noteListViewTypeSummary"
            />

        <com.seadro.notesx.settings.PasswordPreference
            android:title="@string/pref_changePassword"
            android:dialogTitle="@string/pref_changePassword"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_catStorage">
        <Preference
                android:title="@string/pref_backup"
                android:persistent="false">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:targetPackage="com.seadro.notesx"
                    android:targetClass="com.seadro.notesx.BackupActivity"
                    />
        </Preference>

        <Preference
                android:title="@string/pref_restore"
                android:persistent="false">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:targetPackage="com.seadro.notesx"
                    android:targetClass="com.seadro.notesx.RestoreActivity"
                    />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>