<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/app_description"
        android:fontFamily="sans-serif-light"
        />

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="18dip"
        android:textSize="18sp"
        android:text="@string/app_credits"
        android:fontFamily="sans-serif-light"
        android:autoLink="web|email"
        />

    <TextView
        android:id="@+id/app_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:text="@string/app_bottom"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>